--- a/main.tex
+++ b/main.tex
@@ -64,6 +64,38 @@
     \label{fig:high_low_pass}
 \end{figure}
 
+\begin{figure}[h!]
+    \centering
+    \begin{subfigure}{0.48\textwidth}
+        \includegraphics[width=\linewidth]{Reg_Lift_U_1_L_D__Masters_NHERIDeprisImpact2_goodtests_Reg_Lift_U_1_L_Trial04_Peak.png}
+        \caption{1L debris.}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}{0.48\textwidth}
+        \includegraphics[width=\linewidth]{Reg_Lift_U_24_L_D__Masters_NHERIDeprisImpact2_goodtests_Reg_Lift_U_24_L_Trial04_Peak.png}
+        \caption{24L debris.}
+    \end{subfigure}
+    \caption{Force time histories for peak impacts under unbroken wave trials.}
+    \label{fig:timehist_unbroken_peaks}
+\end{figure}
+
+\begin{figure}[h!]
+    \centering
+    \begin{subfigure}{0.48\textwidth}
+        \includegraphics[width=\linewidth]{Reg_Lift_U_1_L_D__Masters_NHERIDeprisImpact2_goodtests_Reg_Lift_U_1_L_Trial04_Damming.png}
+        \caption{1L debris.}
+    \end{subfigure}
+    \hfill
+    \begin{subfigure}{0.48\textwidth}
+        \includegraphics[width=\linewidth]{Reg_Lift_U_24_L_D__Masters_NHERIDeprisImpact2_goodtests_Reg_Lift_U_24_L_Trial04_Damming.png}
+        \caption{24L debris.}
+    \end{subfigure}
+    \caption{Force time histories for damming under unbroken wave trials.}
+    \label{fig:timehist_unbroken_damming}
+\end{figure}
+
+    
+\end{figure}
 \section{Impact Force Identification}
 \begin{itemize}
     \item Video evidence and filtered signals revealed that debris impact occurs in two stages:
