Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -43,7 +43,7 @@
 \section{Testing Methodology}
 \begin{itemize}
     \item Experiments were conducted in a tsunami flume equipped with a rigid mid-flume structure.
-    \item Two wave types were tested: unbroken solitary waves (primary focus) and broken solitary waves. This paper focuses on the unbroken solitary wave tests. 
+    \item Two wave types were tested: unbroken solitary waves and broken solitary waves. This paper focuses on the unbroken solitary wave tests. 
     \item Debris fields were generated in three configurations:
     \begin{itemize}
         \item Regular longitudinal (aligned with flow).
@@ -66,42 +66,41 @@
 
 \begin{figure}[h!]
     \centering
-    \begin{subfigure}{0.48\textwidth}
-        \includegraphics[width=\linewidth]{Reg_Lift_U_1_L_D__Masters_NHERIDeprisImpact2_goodtests_Reg_Lift_U_1_L_Trial04_Peak.png}
-        \caption{1L debris.}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}{0.48\textwidth}
-        \includegraphics[width=\linewidth]{Reg_Lift_U_24_L_D__Masters_NHERIDeprisImpact2_goodtests_Reg_Lift_U_24_L_Trial04_Peak.png}
-        \caption{24L debris.}
-    \end{subfigure}
-    \caption{Force time histories for peak impacts under unbroken wave trials.}
-    \label{fig:timehist_unbroken_peaks}
+    \includegraphics[width=0.65\textwidth]{Reg_Lift_U_1_L_D__Masters_NHERIDeprisImpact2_goodtests_Reg_Lift_U_1_L_Trial04_Peak.png}
+    \caption{Force time history for 1L debris under unbroken wave.}
+    \label{fig:timehist_1L_peak}
 \end{figure}
 
 \begin{figure}[h!]
     \centering
-    \begin{subfigure}{0.48\textwidth}
-        \includegraphics[width=\linewidth]{Reg_Lift_U_1_L_D__Masters_NHERIDeprisImpact2_goodtests_Reg_Lift_U_1_L_Trial04_Damming.png}
-        \caption{1L debris.}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}{0.48\textwidth}
-        \includegraphics[width=\linewidth]{Reg_Lift_U_24_L_D__Masters_NHERIDeprisImpact2_goodtests_Reg_Lift_U_24_L_Trial04_Damming.png}
-        \caption{24L debris.}
-    \end{subfigure}
-    \caption{Force time histories for damming under unbroken wave trials.}
-    \label{fig:timehist_unbroken_damming}
+    \includegraphics[width=0.65\textwidth]{Reg_Lift_U_24_L_D__Masters_NHERIDeprisImpact2_goodtests_Reg_Lift_U_24_L_Trial04_Peak.png}
+    \caption{Force time history for 24L debris under unbroken wave.}
+    \label{fig:timehist_24L_peak}
 \end{figure}
 
-    
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.65\textwidth]{Reg_Lift_U_1_L_D__Masters_NHERIDeprisImpact2_goodtests_Reg_Lift_U_1_L_Trial04_Damming.png}
+    \caption{Damming force time history for 1L debris.}
+    \label{fig:timehist_1L_damming}
 \end{figure}
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.65\textwidth]{Reg_Lift_U_24_L_D__Masters_NHERIDeprisImpact2_goodtests_Reg_Lift_U_24_L_Trial04_Damming.png}
+    \caption{Damming force time history for 24L debris.}
+    \label{fig:timehist_24L_damming}
+\end{figure}
+
+
 \section{Impact Force Identification}
 \begin{itemize}
     \item Video evidence and filtered signals revealed that debris impact occurs in two stages:
     \begin{itemize}
-        \item First impact: initial strike on the unsubmerged structure (Fig.~\ref{fig:first_impact}).
+        \item First impact: initial strike on the unsubmerged structure (Fig.~\ref{fig:first_impact}). 
         \item Later impacts: submerged strikes caused by overtopping, suction, and recirculation (Fig.~\ref{fig:second_impact}).
+        \item  The first impact is characterized by one simultaneous impact while later impacts show to be more scattered and chaotic especially for high debris numbers (Fig.~\ref{fig:timehist_24L_peak}).
     \end{itemize}
     \item This behavior was consistent across debris types and configurations, highlighting the need to distinguish between first and late peaks.
 \end{itemize}
